force-app/main/default/objects/vlocity_ps__CalculationMatrix__c/vlocity_ps__CalculationMatrix__c.object-meta.xml
<CustomObject>
    <description>Defines a flexible table (or &quot;matrix&quot;) that enables fast lookup based on one or more input dimensions and returns one or more corresponding output values. The input and output dimensions are entirely flexible and configured in the definition of the matrix without having to change the underlying object model. Vlocity Calculation Matrices can be changed by authorized administrators who do not have the &quot;Customize Application&quot; permission and without writing Apex code.</description>
    <label>Vlocity Calculation Matrix</label>
    <nameField>
        <label>Calculation Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>