force-app/main/default/objects/vlocity_ps__CalculationMatrix__c/fields/vlocity_ps__SubGroupKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SubGroupKey__c</fullName>
    <label>Sub Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>