force-app/main/default/objects/vlocity_ps__CalculationMatrix__c/fields/vlocity_ps__VersionsWithLongOutputCount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__VersionsWithLongOutputCount__c</fullName>
    <label>Versions With Long Output Count</label>
    <summaryFilterItems>
        <field>vlocity_ps__CalculationMatrixVersion__c.vlocity_ps__UseLongOutput__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ps__CalculationMatrixVersion__c.vlocity_ps__CalculationMatrixId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>