force-app/main/default/objects/vlocity_ps__CalculationMatrix__c/fields/vlocity_ps__WildcardColumn__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__WildcardColumn__c</fullName>
    <label>Wildcard Column</label>
    <length>80</length>
    <type>Text</type>
</CustomField>