force-app/main/default/objects/vlocity_ps__CalculationMatrix__c/recordTypes/vlocity_ps__Grouped.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Grouped</fullName>
    <active>true</active>
    <label>Grouped</label>
</RecordType>