force-app/main/default/objects/vlocity_ps__CalculationMatrix__c/recordTypes/vlocity_ps__RowVersioned.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__RowVersioned</fullName>
    <active>true</active>
    <label>Row-Versioned</label>
</RecordType>